feat(group-buy): add isWish flag to interest, participated, and general group-buy list retrieval and post detail retrieval (#10)