@@ -18,6 +18,7 @@ import com.moogsan.moongsan_backend.domain.order.repository.OrderRepository;
 import com.moogsan.moongsan_backend.domain.user.entity.User;
 import com.moogsan.moongsan_backend.domain.user.repository.WishRepository;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
@@ -26,9 +27,10 @@ import org.springframework.transaction.annotation.Transactional;
 
 
 import java.time.LocalDateTime;
-import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @Transactional(readOnly=true)
 @RequiredArgsConstructor
@@ -47,18 +49,23 @@ public class GroupBuyQueryService {
         return groupBuyQueryMapper.toUpdateResponse(groupBuy);
     }
 
-    /// TODO 모든 조회 로직에 위시 여부 조회 추가(리턴되는 리스트 위시 여부만 조회)
-    // Wish-related methods commented out
-    /*
-    // (일반 메소드) 리스트 내 위시 여부 조회
-    private Set<Long> fetchWishIds(Long userId, List<GroupBuy> posts) {
+    // 모든 조회 로직에 위시 여부 조회 추가(리턴되는 리스트 위시 여부만 조회)
+    private Map<Long, Boolean> fetchWishMap(Long userId, List<GroupBuy> posts) {
         if (userId == null || posts.isEmpty()) {
-            return Collections.emptySet();
+            return Collections.emptyMap();
         }
-        List<Long> ids = posts.stream().map(GroupBuy::getId).toList();
-        return wishRepository.findPostIdsByUserAndPostIds(userId, ids);
+        List<Long> ids = posts.stream()
+                .map(GroupBuy::getId)
+                .toList();
+        Set<Long> wishedIds = new HashSet<>(wishRepository.findWishedGroupBuyIds(userId, ids));
+
+        // Map<groupBuyId, isWished>
+        return ids.stream()
+                .collect(Collectors.toMap(
+                        id -> id,
+                        id -> wishedIds.contains(id)
+                ));
     }
-    */
 
     /// 검색
     // TODO V2 -> 메서드명 고민해보기
@@ -70,6 +77,7 @@ public class GroupBuyQueryService {
 
     /// 공구 리스트 조회
     public PagedResponse<BasicListResponse> getGroupBuyListByCursor(
+            User currentUser,
             Long categoryId,
             String sort,
             Long cursorId,
@@ -153,8 +161,16 @@ public class GroupBuyQueryService {
         }
 
         // DTO 매핑
+        Map<Long, Boolean> wishMap = fetchWishMap(currentUser.getId(), entities);
+
+        // 4) DTO 매핑
         List<BasicListResponse> posts = entities.stream()
-                .map(groupBuyQueryMapper::toBasicListResponse)
+                .map(gb -> {
+                    // 로그인 안 됐거나 wishMap이 비어있으면 기본 false
+                    boolean wished = wishMap.getOrDefault(gb.getId(), false);
+                    // mapper 호출
+                    return groupBuyQueryMapper.toBasicListResponse(gb, wished);
+                })
                 .collect(Collectors.toList());
 
         // 다음 커서 & hasMore 계산
@@ -190,12 +206,12 @@ public class GroupBuyQueryService {
                 .orElseThrow(GroupBuyNotFoundException::new);
 
         boolean isParticipant = orderRepository.existsByUserIdAndGroupBuyId(userId, postId);
+        boolean isWish = wishRepository.existsByUserIdAndGroupBuyId(userId, postId);
 
-        return groupBuyQueryMapper.toDetailResponse(groupBuy, isParticipant);
+        return groupBuyQueryMapper.toDetailResponse(groupBuy, isParticipant, isWish);
     }
 
-    /// 관심 공구 리스트 조회
-    /// TODO V2
+    /// 관심 공구 리스트 조회: 관심 등록 순으로 커서 적용 필요
     public PagedResponse<WishListResponse> getGroupBuyWishList(
             User currentUser,
             String postStatus,
@@ -272,10 +288,20 @@ public class GroupBuyQueryService {
             );
         }
 
-        // 매핑
+        Map<Long, Boolean> wishMap = fetchWishMap(currentUser.getId(), groupBuys);
+
         List<HostedListResponse> posts = groupBuys.stream()
-                .map(groupBuyQueryMapper::toHostedListResponse)
-                .toList();
+                .map(gb -> {
+                    // Map에서 위시 여부 꺼내기 (없으면 false)
+                    boolean isWished = wishMap.getOrDefault(gb.getId(), false);
+
+                    // DTO 변환
+                    return groupBuyQueryMapper.toHostedListResponse(
+                            gb,
+                            isWished
+                    );
+                })
+                .collect(Collectors.toList());
 
         // 다음 커서 및 더보기 여부
         Long nextCursor = posts.isEmpty()
@@ -292,7 +318,7 @@ public class GroupBuyQueryService {
     }
 
 
-    /// 참여 공구 리스트 조회
+    /// 참여 공구 리스트 조회: 주문 생성 순으로 커서 적용 추가 필요
     public PagedResponse<ParticipatedListResponse> getGroupBuyParticipatedList(
             User currentUser,
             String sort,
@@ -321,8 +347,17 @@ public class GroupBuyQueryService {
         }
 
         // 매핑
+        List<GroupBuy> groupBuys = orders.stream()
+                .map(Order::getGroupBuy)
+                .toList();
+        Map<Long, Boolean> wishMap = fetchWishMap(currentUser.getId(), groupBuys);
+
+        // DTO 매핑
         List<ParticipatedListResponse> posts = orders.stream()
-                .map(groupBuyQueryMapper::toParticipatedListResponse)
+                .map(order -> {
+                    boolean wished = wishMap.getOrDefault(order.getGroupBuy().getId(), false);
+                    return groupBuyQueryMapper.toParticipatedListResponse(order, wished);
+                })
                 .toList();
 
         // 다음 커서 및 더보기 여부
